修改相关配置

--- a/yami-shop-common/src/main/resources/shop.properties
+++ b/yami-shop-common/src/main/resources/shop.properties
@@ -1,7 +1,7 @@
-shop.qiniu.resourcesUrl=https://img.mall4j.com/
-shop.qiniu.accessKey=****
-shop.qiniu.secretKey=****
-shop.qiniu.bucket=****
+shop.qiniu.resourcesUrl=http://rxrja8784.hn-bkt.clouddn.com/
+shop.qiniu.accessKey=Pl1XRMliTArmX1mdadPTylTIHjHRJZmEdTnK6yqa
+shop.qiniu.secretKey=-i5RPJbEK9tn0sCDG6WfRp7SxTPQTS5ikx_TIGx0
+shop.qiniu.bucket=mall-xiaoluo
 # \u5177\u4F53\u67E5\u770BQiniuZone.java
 shop.qiniu.zone=HUA_NAN
 
@@ -9,7 +9,7 @@ shop.aLiDaYu.accessKeyId=
 shop.aLiDaYu.accessKeySecret=
 shop.aLiDaYu.signName=
 
-shop.tokenAesKey=q5e6w6w9f4q497te
+shop.tokenAesKey=02d15100-cce1-4f84-957c-72869fbbdbf9
 
 shop.imgUpload.imagePath=D:/Mall4j/IMG/
 # 1.\u672C\u5730\u6587\u4EF6\u4E0A\u4F20 2.\u4E03\u725B\u4E91
