--- a/mall4v/.env.development
+++ b/mall4v/.env.development
@@ -5,4 +5,5 @@ ENV = 'development'
 VUE_APP_BASE_API = 'http://127.0.0.1:8085'
 
 # 静态资源文件url
-VUE_APP_RESOURCES_URL = 'https://img.mall4j.com/'
+VUE_APP_RESOURCES_URL = 'rxrja8784.hn-bkt.clouddn.com'
+
